# tinkoff

./: README.md  package-lock.json
task1/: .prettierrc  package-lock.json
task3/src/: es6.js  oop.js
task4/: README.md  index.html  index.less  main.js  package-lock.json  package.json
task4/backend/: .gitignore  pyproject.toml
task4/backend/artstore/: __init__.py  main.py
task4/frontend/: index.html  index.less  main.js
task5/movies_frontend/: db.json  package-lock.json  package.json
task5/movies_frontend/src/: App.jsx  index.css  index.js  theme.js
task5/movies_frontend/src/app/: App.css  App.jsx
task5/movies_frontend/src/components/: Header.jsx
task5/movies_frontend/src/components/add-form/: AddForm.jsx
task5/movies_frontend/src/components/edit-form/: EditForm.jsx
task5/movies_frontend/src/components/header/: Header.jsx
task5/movies_frontend/src/components/movie-card/: MovieCard.jsx
task5/movies_frontend/src/components/movie-details/: MovieDetails.jsx
task5/movies_frontend/src/components/movies-list/: MoviesList.jsx
task5/movies_frontend/src/components/search/: SearchField.jsx
task5/movies_frontend/src/pages/: ListPage.jsx
task5/movies_frontend/src/pages/movies-page/: AddPage.jsx  EditPage.jsx  MoviesPage.jsx
